(c) Karsten Reincke, Frankfurt a.M. 2012 ff.
2013-12-26: 
* seperated myCsrf release number from template release number
* improved titel page mycsrf template file
2013-02-16: footnote formatting with koma \deffootnote
2012-07-10: starting work on release 1.2 (csquote integration)
2012-03-25/REL-1.1:
* integrated tex4ht for generating html versions of the
  litetature lists
* modularised the nomenclature files and added them
  also into the literature review files
2012-02-21/REL-1.0:
* initial publishing the myCsrf-package as github project