@@ -22,22 +22,22 @@
 % an 'and before last author explicetly written conjunction
 
 % for authors in citations
-\renewcommand*{\jbbtasep}{ u. } % bta = between two authors sep
-\renewcommand*{\jbbfsasep}{, } % bfsa = between first and second author sep
-\renewcommand*{\jbbstasep}{ u. }% bsta = between second and third author sep
+\renewcommand*{\jbbtasep}{\ u.\ } % bta = between two authors sep
+\renewcommand*{\jbbfsasep}{,\ } % bfsa = between first and second author sep
+\renewcommand*{\jbbstasep}{\ u.\ }% bsta = between second and third author sep
 % for editors in citations
-\renewcommand*{\jbbtesep}{ u. } % bta = between two authors sep
-\renewcommand*{\jbbfsesep}{, } % bfsa = between first and second author sep
-\renewcommand*{\jbbstesep}{ u. }% bsta = between second and third author sep
+\renewcommand*{\jbbtesep}{\ u.\ } % bta = between two authors sep
+\renewcommand*{\jbbfsesep}{,\ } % bfsa = between first and second author sep
+\renewcommand*{\jbbstesep}{\ u.\ }% bsta = between second and third author sep
 
 % for authors in literature list
-\renewcommand*{\bibbtasep}{ u. } % bta = between two authors sep
-\renewcommand*{\bibbfsasep}{, } % bfsa = between first and second author sep
-\renewcommand*{\bibbstasep}{ u. }% bsta = between second and third author sep
+\renewcommand*{\bibbtasep}{\ u.\ } % bta = between two authors sep
+\renewcommand*{\bibbfsasep}{,\ } % bfsa = between first and second author sep
+\renewcommand*{\bibbstasep}{\ u.\ }% bsta = between second and third author sep
 % for editors  in literature list
-\renewcommand*{\bibbtesep}{ u. } % bte = between two editors sep
-\renewcommand*{\bibbfsesep}{, } % bfse = between first and second editor sep
-\renewcommand*{\bibbstesep}{ u. }% bste = between second and third editor sep
+\renewcommand*{\bibbtesep}{\ u.\ } % bte = between two editors sep
+\renewcommand*{\bibbfsesep}{,\ } % bfse = between first and second editor sep
+\renewcommand*{\bibbstesep}{\ u.\ }% bste = between second and third editor sep
 
 % use: name, forname, forname lastname u. forname lastname
 \jurabibsetup{authorformat=firstnotreversed}
@@ -59,22 +59,22 @@
 % replace ugly a.a.O. by ders., a.a.O. resp. ders., ebda.
 % but if there are more than one author or girl writers?
 \AddTo\bibsgerman{
-  \renewcommand*{\ibidemname}{Ds., a.a.O.}
-  \renewcommand*{\ibidemmidname}{ds., a.a.O.}
+  \renewcommand*{\ibidemname}{Ds.,\ a.a.O.}
+  \renewcommand*{\ibidemmidname}{ds.,\ a.a.O.}
 }
-\renewcommand*{\samepageibidemname}{Ds., ebda.}
-\renewcommand*{\samepageibidemmidname}{ds., ebda.}
+\renewcommand*{\samepageibidemname}{Ds.,\ ebda.}
+\renewcommand*{\samepageibidemmidname}{ds.,\ ebda.}
 
 %%% (5) specific configuration of bibdata in bibliography
 % ever an in: before journal and collection/book-tiltes 
-\renewcommand*{\bibbtsep}{in: }
-\renewcommand*{\bibjtsep}{in: }
+\renewcommand*{\bibbtsep}{in:\ }
+\renewcommand*{\bibjtsep}{in:\ }
 % ever a colon after author names 
-\renewcommand*{\bibansep}{: }
+\renewcommand*{\bibansep}{:\ }
 % ever a semi colon after the title 
-\renewcommand*{\bibatsep}{; }
+\renewcommand*{\bibatsep}{;\ }
 % ever a comma before date/year
-\renewcommand*{\bibbdsep}{, }
+\renewcommand*{\bibbdsep}{,\ }
 
 % let jurabib insert the S. and p. information
 % no S. necessary in bib-files and in cites/footcites
