@@ -1,4 +1,7 @@
 (c) Karsten Reincke, Frankfurt a.M. 2012 ff.
+2014-01-10:
+* added direct pdfLatex run into the Makefile
+* added hyperref package
 2013-12-26: 
 * seperated myCsrf release number from template release number
 * improved titel page mycsrf template file
